# ai-part-designer

./: .env.example  .gitignore  .project  CHANGELOG.md  DEPLOYMENT_COMPLETION_REPORT.md  IMPLEMENTATION_SUMMARY.md  ISSUES.md  Makefile  OAUTH_E2E_TESTING_SUMMARY.md  README.md  READY_TO_EXECUTE.md  ROADMAP.md  SECURITY_NOTES.md  TEST_COVERAGE_SUMMARY.md  TRACING_IMPLEMENTATION_SUMMARY.md  api_test_results.txt  chat-history.md  conversation-history.md  docker-compose.observability.yml  docker-compose.test.yml  docker-compose.yml  milestones.md  user-stories.md
backend/: .dockerignore  .env.example  CODE_QUALITY_DELIVERABLES.md  CODE_QUALITY_QUICK_REF.md  CODE_QUALITY_README.md  CODE_QUALITY_ROADMAP.md  CODE_QUALITY_SUMMARY.md  Dockerfile  EXAMPLE_CHANGES.md  FINAL_VERIFICATION.txt  MIGRATION_README.md  MIGRATION_SUMMARY.txt  PHASE_1_2_COMPLETE.md  TIMEZONE_MIGRATION_REPORT.md  _migrate_test_db.py  _migrate_test_db_epic13.py  alembic.ini  find_missing_tables.py  migrate_timezones.py  mypy_target.toml  pyproject.toml  pyproject.toml.backup  requirements.txt  verify_migration.py
backend/alembic/: env.py
backend/alembic/versions/: 009_design_context.py  010_payment_history.py  011_oauth_connections.py  012_onboarding_fields.py  013_add_organization_id_to_projects.py  014_notifications.py  015_credit_balances.py  016_usage_quotas.py  017_missing_tables.py  018_templates_columns.py  019_project_status.py  020_team_models.py  021_rating_models.py  022_mfa_columns.py  023_marketplace_models.py  024_design_marketplace_fields.py  025_design_remix_tracking.py  026_design_copy_tracking.py  027_add_files_metadata_to_reference_components.py  027_design_archival_columns.py  028_design_ratings_comments.py  029_design_license_columns.py  030_content_report_evidence_url.py  031_feature_flags.py  20240115_001_initial_schema.py  20240120_002_assemblies.py  20240124_003_reference_components.py  20240124_004_abuse_protection.py  20260125_005_conversations.py  20260126_220302_add_notifications_dismissed_at.py  20260211_006_add_design_id_to_conversations.py  20260225_184337_merge_heads.py
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  client.py  codegen.py  command_handlers.py  commands.py  direct_generation.py  engineering_glossary.py  exceptions.py  generator.py  iterative_reasoning.py  parser.py  prompts.py  providers.py  reasoning.py  vision.py
backend/app/api/: __init__.py  deps.py
backend/app/cad/: __init__.py  alignment.py  dovetails.py  drawing_generator.py  enclosure.py  exceptions.py  export.py  gridfinity.py  hardware.py  modifier.py  mounting.py  ocp_compat.py  operations.py  primitives.py  templates.py  templates_cadquery.py.bak  thread_generator.py  thread_print_optimizer.py  threads.py
backend/app/cad_v2/: __init__.py
backend/app/core/: __init__.py  audit.py  auth.py  backup.py  cache.py  config.py  database.py  encrypted_storage.py  events.py  features.py  file_encryption.py  kms.py  licenses.py  logging.py  metrics.py  oauth.py  rate_limit.py  rate_limiter.py  redis_rate_limit.py  security.py  storage.py  storage_init.py  stripe.py  tracing.py  undo_tokens.py  usage_limits.py  validation.py
backend/app/enclosure/: __init__.py  cutouts.py  prompts.py  schemas.py  service.py  standoffs.py  templates.py
backend/app/layout/: __init__.py
backend/app/middleware/: __init__.py  abuse_protection.py  request_context.py  security.py  tier_enforcement.py
backend/app/models/: __init__.py  annotation.py  api_key.py  assembly.py  audit.py  base.py  content.py  conversation.py  coupon.py  design.py  design_context.py  feature_flag.py  file.py  job.py  marketplace.py  moderation.py  notification.py  oauth.py  organization.py  payment.py  project.py  rating.py  reference_component.py  spatial_layout.py  subscription.py  team.py  template.py  user.py
backend/app/repositories/: __init__.py  base.py  repositories.py
backend/app/schemas/: archive.py  component_specs.py  license.py  marketplace.py  rating.py  team.py  threads.py
backend/app/seeds/: __init__.py  components_v2.py  examples.py  large_scale.py  marketplace.py  starters.py  templates.py  threads.py  tiers.py  users.py
backend/app/services/: __init__.py  abuse_detection.py  backup.py  cad_extractor.py  component_storage.py  content_moderation.py  conversation_moderation.py  credits.py  datasheet_parser.py  design_archive.py  design_comment_service.py  design_rating_service.py  design_report_service.py  design_service.py  email.py  feature_flags.py  geometry_introspection.py  integrity.py  key_rotation.py  license_service.py  model_context.py  moderation.py  notification_service.py  payment.py  pdf_processor.py  rating_service.py  security_audit.py  storage_service.py  team_service.py
backend/app/types/: __init__.py  aliases.py  protocols.py
backend/app/websocket/: __init__.py  manager.py  subscriber.py
backend/app/worker/: .env.example  __init__.py  celery.py  ws_utils.py
backend/docs/: STRUCTURED_LOGGING.md  audit-logs.md  cad-v1-to-v2-migration-guide.md  prometheus-metrics.md  structured-logging.md
backend/scripts/code_quality/: README.md  fix_dtz003.py  fix_ruf012.py
backend/tests/: conftest.py  factories.py
backend/tests/ai/: test_client.py  test_codegen.py  test_command_handlers.py  test_commands.py  test_engineering_glossary.py  test_exceptions.py  test_generator.py  test_iterative_reasoning.py  test_parser.py  test_prompts.py  test_providers.py  test_reasoning.py  test_vision.py
backend/tests/alembic/: __init__.py  test_migrations.py
backend/tests/api/: README_RBAC_TESTS.md  conftest.py  test_abuse.py  test_admin.py  test_admin_batch1.py  test_admin_batch2_4.py  test_admin_batch5_6.py  test_admin_cad_v2.py  test_admin_epic10.py  test_alignment.py  test_annotations.py  test_archives.py  test_assemblies.py  test_audit_design.py  test_audit_shares.py  test_audit_subscriptions.py  test_auth.py  test_bom.py  test_comment_notifications.py  test_comments.py  test_components.py  test_contact.py  test_conversations.py  test_dashboard.py  test_designs.py  test_drawings.py  test_exports.py  (+33 more)
(+980 files in other folders)
