[project]
name = "ai-part-designer"
version = "0.1.0"
description = "AI-powered 3D part generation platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
    { name = "AI Part Designer Team" }
]

dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "email-validator>=2.0.0",
    
    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    
    # Cache & Queue
    "redis>=5.0.0",
    "celery[redis]>=5.3.0",
    
    # CAD Engine (Build123d - successor to CadQuery)
    # Installed via conda-forge for OCP compatibility
    "build123d>=0.7.0",
    
    # AI Integration (Claude)
    "anthropic>=0.40.0",
    
    # Authentication & Security
    "PyJWT[crypto]>=2.8.0",  # Replaced python-jose to avoid ecdsa vulnerability
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<4.1.0",  # Pin bcrypt < 4.1 for passlib compatibility
    "cryptography>=42.0.0",
    "pyotp>=2.9.0",
    
    # Key Management (Cloud KMS) - Updated for protobuf 5.x support
    "google-cloud-kms>=3.0.0",
    
    # Object Storage (S3-compatible)
    "boto3>=1.34.0",
    "aioboto3>=13.0.0",
    
    # HTTP client
    "httpx>=0.26.0",
    
    # Payment Processing
    "stripe>=8.0.0",
    
    # OAuth
    "authlib>=1.3.0",
    "itsdangerous>=2.1.0",
    
    # PDF Processing
    "PyMuPDF>=1.24.0",
    "pdf2image>=1.16.0",
    
    # Image Processing
    "pillow>=10.0.0",
    "numpy>=1.26.0",
    
    # MFA/QR Code
    "qrcode[pil]>=7.4.0",
    
    # Async file operations
    "aiofiles>=23.2.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "deprecated>=1.2.0",
    
    # Monitoring
    "prometheus-fastapi-instrumentator>=7.0.0",
    
    # Distributed Tracing
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.42b0",
    "opentelemetry-instrumentation-redis>=0.42b0",
    "opentelemetry-instrumentation-httpx>=0.42b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.21.0",
    # Note: opentelemetry-exporter-jaeger is deprecated since v1.35, use OTLP instead
    
    # Security: Fix CVE-2026-0994 by upgrading to protobuf 5.x
    "protobuf>=5.29.6,<6.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "pytest-split>=0.8.0",  # For CI test sharding
    "httpx>=0.26.0",
    "factory-boy>=3.3.0",
    "aiosqlite>=0.19.0",  # For in-memory test database
    
    # Linting & Formatting
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    
    # Type stubs
    "types-redis>=4.6.0",
    "types-passlib>=1.7.7",
    "boto3-stubs>=1.34.0",
    
    # Security scanning
    "bandit>=1.7.0",
]

[project.scripts]
ai-part-designer = "app.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "ISC",    # flake8-implicit-str-concat
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in argument defaults (FastAPI Depends)
    "B904",   # raise without from inside except
    # Temporarily ignored - requires substantial refactoring
    "ERA001", # commented-out code
    "SIM117", # multiple with statements - sometimes more readable separate
    "E402",   # imports not at top - sometimes needed for path manipulation
    # Style preferences - will address incrementally
    "SIM102", # collapsible if - sometimes clearer as nested
    "SIM105", # contextlib.suppress - try/except is more explicit
    "SIM401", # dict.get vs if/else - sometimes if/else is clearer
    "UP007",  # Union vs | - keep for compatibility with older typing
    "UP046",  # Generic class syntax - PEP 695 is new
    "RUF001", # ambiguous unicode - intentional multiplication sign ×
    "N802",   # uppercase function name - used for settings properties
    "N806",   # uppercase variable - used for constants in functions
    "N811",   # constant imported as non-constant - intentional aliasing
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001", "ARG002", "S101", "PT011", "PT017", "B017"]
"alembic/*" = ["ERA001"]
# Files that check library availability via try/import/except pattern
"app/api/v1/extraction.py" = ["F401"]
"app/cad_v2/compiler/*.py" = ["F401"]
"app/services/cad_extractor.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
# Strict mode enabled (PR #278)
warn_return_any = true
warn_unused_ignores = false  # Has false positives with overrides
no_implicit_optional = true
strict_equality = true

# Strictness flags - all enabled
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

# Plugins
plugins = ["pydantic.mypy"]

# Ignore missing stubs for optional dependencies
[[tool.mypy.overrides]]
module = [
    "fitz.*",
    "cairosvg.*",
    "ezdxf.*",
    "aiosmtplib.*",
    "pdf2image.*",
    "anthropic.*",
    "stl.*",
    "numpy.*",
    "aioboto3.*",
    "botocore.*",
    "build123d.*",
    "OCP.*",
    "cadquery.*",
    "celery.*",
    "stripe.*",
    "redis.*",
    "structlog.*",
    "prometheus_client.*",
    "prometheus_fastapi_instrumentator.*",
    "opentelemetry.*",
]
ignore_missing_imports = true

# Relax checking for modules with heavy SQLAlchemy usage
[[tool.mypy.overrides]]
module = [
    "app.repositories.*",
    "app.models.*",
    "app.services.*",
    "app.api.*",
    "app.core.*",
    "app.db.*",
    "app.cad.*",
    "app.cad_v2.*",
    "app.enclosure.*",
    "app.layout.*",
    "app.worker.*",
    "app.ai.*",
    "app.middleware.*",
    "app.websocket.*",
    "app.seeds.*",
    "app.types.*",
    "app.main",
]
# Allow dynamic attribute access for ORM models and CAD operations
# Removed: truthy-function, dict-item, comparison-overlap (fixed in PR #278)
# Removed: misc, name-defined, prop-decorator, list-item (fixed in PR #278)
# Removed: import-untyped, call-overload, var-annotated, index (fixed in PR #278)
# Removed: operator, call-arg (fixed in PR #278)
# Removed: return-value (fixed in PR #278)
# Removed: union-attr, attr-defined, assignment, arg-type (fixed in PR #278)
# All error codes enabled - strict mode ready

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "app/alembic/*",
    "app/seeds/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 80

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
